--- a/app/src/main/res/layout/choose_goal.xml
+++ b/app/src/main/res/layout/choose_goal.xml
@@ -15,7 +15,7 @@
         android:layout_marginLeft="25dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/abeezee"
-        android:text="Almost done ! choose a goal "
+        android:text="choose a goal "
         android:textColor="#040404"
         android:textSize="30sp" />
 
