--- a/app/src/main/res/layout/journey_home.xml
+++ b/app/src/main/res/layout/journey_home.xml
@@ -6,52 +6,9 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#f1f1f1">
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="570dp"
-            android:layout_height="366dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/backpro" />
-
-        <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="487dp"
-            android:layout_height="341dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/backpro" />
-
-        <LinearLayout
-            android:id="@+id/linearLayout3"
-            android:layout_width="416dp"
-            android:layout_height="522dp"
-            android:background="@drawable/background_grey"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:layout_weight="1">
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" >
 
                     <Button
                         android:id="@+id/button4"
@@ -66,40 +23,16 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.219" />
 
-                    <ImageView
-                        android:id="@+id/imageView7"
-                        android:layout_width="116dp"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.1"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.192"
-                        tools:srcCompat="@tools:sample/avatars" />
 
-                    <Button
-                        android:id="@+id/button3"
-                        android:layout_width="116dp"
-                        android:layout_height="44dp"
-                        android:layout_weight="1"
-                        android:text="Edit"
-                        android:textColor="@color/black"
-                        app:backgroundTint="@color/white"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.1"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="1.0" />
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="choose goal " />
+</LinearLayout>
 
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </RelativeLayout>
