--- a/app/src/main/res/layout/journey_home.xml
+++ b/app/src/main/res/layout/journey_home.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    tools:context="com.example.main.MainActivity">
 
 <LinearLayout
     android:layout_width="wrap_content"
@@ -14,7 +15,7 @@
                         android:id="@+id/button4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:onClick="logoutUser"
+
                         android:text="SignOut"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
