--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -26,16 +26,11 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/archivo_black"
                 android:layout_marginTop="40dp"
-                android:text=" Welcome back !"
+                android:text=" Forgot your password ? "
                 android:textAllCaps="false"
                 android:textColor="#020202"
                 android:textSize="36sp"
                 />
-            <ImageView
-                android:id="@+id/circle5"
-                android:layout_width="134dp"
-                android:layout_height="134dp"
-                android:src="@drawable/circletrasparant" />
         </LinearLayout>
 
         <TextView
@@ -45,15 +40,15 @@
             android:layout_marginStart="80dp"
             android:layout_marginLeft="60dp"
             android:fontFamily="@font/abeezee"
-            android:text="Sign in to your account"
+            android:text="Please enter your email"
             android:textColor="#000000"
             android:textSize="24sp"
             />
 
         <EditText
-            android:layout_marginTop="30dp"
+
             android:layout_marginStart="30dp"
-            android:id="@+id/login_email"
+            android:id="@+id/reset_email"
             android:layout_width="315dp"
             android:layout_height="65dp"
             android:background="@android:drawable/dialog_holo_light_frame"
@@ -67,57 +62,20 @@
             android:textStyle="bold"
             />
 
-        <EditText
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="30dp"
-            android:id="@+id/login_password"
-            android:layout_width="314dp"
-            android:layout_height="60dp"
-            android:background="@android:drawable/dialog_holo_light_frame"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:padding="20dp"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            android:textSize="17sp"
-            android:textStyle="bold"/>
-
-
-
-
-        <TextView
-
-            android:id="@+id/forgetpasswordlink"
-            android:layout_width="189dp"
-            android:layout_height="47dp"
-            android:text="Forgot your password?"
-            android:textColor="@color/black"
-            android:textSize="17sp"
-            android:textStyle="bold"
-            android:layout_marginLeft="170dp"
-            />
-
-
         <Button
-            android:id="@+id/login_btn"
+            android:id="@+id/next"
             android:layout_width="109dp"
             android:layout_height="57dp"
             android:cursorVisible="true"
             android:fontFamily="@font/alice"
-            android:text="@string/common_signin_button_text"
+            android:text="Next"
             android:textColor="#000000"
             app:backgroundTint="#FFC107"
             app:elevation="10dp"
             android:layout_marginLeft="190dp"
             />
 
-        <ImageView
-            android:id="@+id/circle1"
-            android:layout_width="134dp"
-            android:layout_height="134dp"
-            android:layout_marginTop="-80dp"
-            android:layout_marginRight="-100dp"
-            android:src="@drawable/circletrasparant" />
+
 
         <ImageView
             android:id="@+id/circle2"
